--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     },
     "devDependencies": {
         "@types/socket.io": "^1.4.31",
-        "@types/express": "^4.11.1"
+        "@types/express": "^4.11.1",
+        "@types/jquery": "^3.3.0",
+        "@types/socket.io-client": "^1.4.32"
     }
 }
