--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "@types/socket.io": "^1.4.31",
         "@types/express": "^4.11.1",
         "@types/jquery": "^3.3.0",
-        "@types/socket.io-client": "^1.4.32"
+        "@types/socket.io-client": "^1.4.32",
+        "@types/jqueryui@1.12.2": "^1.12.2"
     }
 }
