--- a/package.json
+++ b/package.json
@@ -19,6 +19,6 @@
         "@types/express": "^4.11.1",
         "@types/jquery": "^3.3.0",
         "@types/socket.io-client": "^1.4.32",
-        "@types/jqueryui@1.12.2": "^1.12.2"
+        "@types/jqueryui": "^1.12.2"
     }
 }
